package seedu.cafectrl.storage;

public class FilePath {
    public static final String MENU_FILE_PATH = "data/menu.txt";
    public static final String PANTRY_STOCK_FILE_PATH = "data/pantry_stock.txt";
    public static final String ORDERS_FILE_PATH = "data/orders.txt";
}
